# Frontier

./: .gitignore  FINANCE.md  README.md
1screener/: sp_summary.py  sp_tickers.py  stock_conditions.py  stock_returns.py  test.py
2my_portfolio/: efficient_frontier.py  pt_summary.py  regressions.py  stock_returns.py
2portfolio/: efficient_frontier.py  frontier1.py  frontier2.py  frontier3.py  frontier4.py  pt_summary.py  pt_tickers.py  test.py
3factorModels/: ff5.py  pt_tickers.py
3frontierModels/: frontier1.py  frontier2.py  frontier5.py  frontier7.py
5ValueAtRisk/: historical.py  varCovar.py
5derivativeModels/: binomial.py  blackScholes.py  monte_carlo.py
6Rust/: rust.txt
criteria/: s&p_tickers.json  sp_tickers.py  stock_conditions.py  stock_returns.py
finance_concepts/: 1marketConcepts.md  2securityTypes.md  3economicFactors.md  4ratios.md  5fundamental.md  5quantFinance.md  6mathStats.md
fundamentals/: dcf_valuation.py
quant/: regressions.py  sp_tickers2.py  test.py
rust_frontier/: Cargo.toml
rust_frontier/src/: main.rs  nasdaq.rs
source/data/: Stats_Summary.csv  s&p_prices.csv  sp_prices.csv  sp_regression.csv  sp_returns.csv
source/data_portfolio/: Stats_Summary.csv  log_returns.csv  pt_arthe_returns.csv  pt_log_returns.csv  pt_prices.csv  pt_regression.csv  pt_returns.csv  pt_summary.csv
source/data_screener/: Stats_Summary.csv  sp_prices.csv  sp_regression.csv  sp_returns.csv
source/keys/: arca_etf_list.txt  mykeys.txt  nasdaq_ticker_list.txt  tickers.txt
