[package]
name = "rust_frontier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
# polars = { git = "https://github.com/pola-rs/polars", rev = "<optional git tag>" }
# mimalloc = { version = "*", default-features = false }
ndarray = "0.15"
ndarray-stats = "0.5"