[package]
name = "rust_frontier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
# polars = { git = "https://github.com/pola-rs/polars", rev = "<optional git tag>" }
# mimalloc = { version = "*", default-features = false }
ndarray = "0.15"
ndarray-stats = "0.5"
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = "1.3.0"
chrono = "0.4.22"
tokio-test = "0.4.2"
polars = "0.23.2"
